# watchmaker

./: .gitignore  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
benches/: weasel.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/common/: collections.rs  failure.rs  math.rs  mod.rs
core/src/genetic/: mod.rs
core/src/search/: mod.rs  progress.rs  search.rs  success.rs
core/src/selector/: mod.rs  torus_selector.rs  tournament_selector.rs  tourniquet_selector.rs
core/src/settings/: detect_concurrency.rs  detect_concurrency_builder.rs  mod.rs  search.rs  search_builder.rs
examples/: cross_over_candidates.rs  hyper_peak.rs  hyper_tsp.rs  hyper_weasel.rs  hyperparameter_grid_search.rs  peak.rs  population_size.rs  progress_callback.rs  show_result.rs  tsp.rs  weasel.rs
src/: lib.rs
src/common/: assertions.rs  common.rs  failure.rs  math.rs  mod.rs  random.rs  wsgenetic.rs  wsgenome.rs
src/examples/: peak.rs  tsp.rs  weasel.rs
src/genetic/: genetic.rs  mod.rs
src/operations/: crossover.rs  evaluate.rs  initialize.rs  mod.rs  mutate.rs
src/search/: mod.rs  progress.rs  reason.rs  search.rs  search_settings.rs  search_settings_builder.rs  success.rs
src/selector/: selector.rs  tournament_selector.rs
src/settings/: concurrency.rs  mod.rs  settings.rs  settings_builder.rs
src/solver/: failure.rs  mod.rs  reason.rs  results.rs  solver.rs  stopping_criterion.rs  success.rs
tests/: Cargo.toml  README.md  lib.rs
tests/benches/: tsp.rs
tests/common/: common.rs  math.rs  mod.rs
tests/examples/: hyper_tsp.rs  hyper_weasel.rs  peak.rs  tsp.rs  weasel.rs
tests/operations/: operations.rs
tests/search/: search.rs
tests/selector/: tournament_selector.rs
tests/settings/: settings.rs
tests/solver/: mod.rs  solver.rs  wsgenome.rs
tests/src/: assertions.rs  lib.rs  math.rs  peak.rs  random.rs  tsp.rs  weasel.rs
tests/tests/: lib.rs
tests/tests/common/: math.rs
tests/tests/search/: search.rs
tests/tests/selector/: mod.rs  torus_selector.rs  tournament_selector.rs  tourniquet_selector.rs
tests/tests/settings/: settings.rs
