[package]
authors = ["Thomas Bratt <thomas.bratt@gmail.com>"]
description = "A genetic algorithm implementation in Rust."
edition = "2021"
homepage = "https://github.com/thomasbratt/watchmaker"
keywords = ["genetic algorithm", "optimization"]
license-file = "LICENSE"
name = "watchmaker"
readme = "README.md"
repository = "git@github.com:thomasbratt/watchmaker.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "weasel"
harness = false
