[package]
authors = ["Thomas Bratt <thomas.bratt@gmail.com>"]
description = "A genetic algorithm implementation in Rust."
documentation = "https://docs.rs/watchmaker/0.1.0/watchmaker/fn.solve.html"
edition = "2021"
homepage = "https://github.com/thomasbratt/watchmaker"
keywords = ["algorithm", "evolution", "genetic", "optimization"]
license = "MIT"
name = "watchmaker"
readme = "README.md"
repository = "https://github.com/thomasbratt/watchmaker"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
rayon = "1.5.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "weasel"
harness = false

[lib]
bench = false
