[package]
authors = ["Thomas Bratt <thomas.bratt@gmail.com>"]
description = "A genetic algorithm implementation in Rust."
edition = "2021"
homepage = "https://github.com/thomasbratt/watchmaker"
keywords = ["algorithm", "evolution", "genetic", "optimization"]
license = "MIT"
name = "tests"
readme = "README.md"
repository = "https://github.com/thomasbratt/watchmaker"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.5.2"
watchmaker = { path="../core" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "tsp"
harness = false

[lib]
bench = false
